--- a/css/styles.css
+++ b/css/styles.css
@@ -800,7 +800,7 @@ address {
   background-color: rgba(33, 150, 243, 0.9);
   width: 100%;
   height: 100%;
-  color: #ffffff;
+  color: var(--background-color);
   padding-top: 63px;
   padding-left: 24px;
   padding-right: 24px;
@@ -856,7 +856,7 @@ address {
   right: 8px;
   width: 30px;
   height: 30px;
-  background: #ffffff;
+  background: var(--background-color);
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   display: flex;
@@ -869,8 +869,8 @@ address {
 }
 
 .modal-btn:focus-within {
-  border: 1px solid #2196f3;
-  fill: #2196f3;
+  border: 1px solid var(--accent);
+  fill: var(--accent);
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -885,7 +885,7 @@ address {
   margin-bottom: 12px;
   margin-top: 0;
 
-  color: #212121;
+  color: var(--title-text-color);
 }
 
 .form-group {
@@ -917,12 +917,12 @@ address {
 }
 
 .form-input:focus {
-  border: 1px solid #2196f3;
+  border: 1px solid var(--accent);
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-input:focus + .icon {
-  fill: #2196f3;
+  fill: var(--accent);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -931,7 +931,7 @@ address {
   font-size: 12px;
   font-weight: 400;
   letter-spacing: 0.01em;
-  color: #757575;
+  color: var(--secondary-text-color);
 }
 
 .form-area {
@@ -965,11 +965,11 @@ address {
   font-size: 12px;
   line-height: 14px;
   letter-spacing: 0.01em;
-  color: #757575;
+  color: var(--secondary-text-color);
 }
 
 .form-textarea:focus {
-  border-color: #2196f3;
+  border-color: var(--accent);
 }
 
 .form-btn {
@@ -980,8 +980,8 @@ address {
   height: 50px;
   padding: 0;
 
-  background: #2196f3;
-  border: #2196f3;
+  background: var(--accent);
+  border: var(--adress-color);
   border-radius: 4px;
   font-weight: 700;
   font-size: 16px;
@@ -989,7 +989,7 @@ address {
   text-align: center;
   letter-spacing: 0.06em;
 
-  color: #ffffff;
+  color: var(--background-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
@@ -1002,7 +1002,7 @@ address {
   font-size: 14px;
   line-height: 24px;
   letter-spacing: 0.03em;
-  color: #757575;
+  color: var(--secondary-text-color);
   margin-top: 20px;
 }
 
@@ -1010,7 +1010,7 @@ address {
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 2px solid #000000;
+  border: 2px solid var(--primary-text-color);
   border-radius: 4px;
   width: 16px;
   height: 15px;
@@ -1020,7 +1020,7 @@ address {
 }
 
 .check-link {
-  color: #2196f3;
+  color: var(--accent);
   margin-left: 3px;
 }
 
@@ -1030,17 +1030,17 @@ address {
   height: 18px;
 }
 .check-icon {
-  fill: #ffffff;
+  fill: var(--background-color);
 }
 .modal-check:checked + .checkbox-text .check {
-  background-color: #2196f3;
+  background-color: var(--accent);
   border: none;
 }
 
 /*-----------------MAILING--------------*/
 
 input {
-  color: #757575;
+  color: var(--secondary-text-color);
 }
 
 .mailing-list {
@@ -1053,7 +1053,7 @@ input {
   flex-direction: column;
 }
 .mailing-input:focus {
-  border-color: #2196f3;
+  border-color: var(--adress-color);
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .mailing-list input {
@@ -1073,7 +1073,7 @@ input {
   line-height: 1.14px;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #ffffff;
+  color: var(--background-color);
 }
 .btn-mailing {
   width: 200px;
@@ -1081,15 +1081,15 @@ input {
   margin: auto;
   margin-left: 12px;
   border-radius: 4px;
-  background: #2196f3;
-  border: #2196f3;
+  background: var(--accent);
+  border: var(--accent);
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
   display: flex;
   align-items: center;
   letter-spacing: 0.06em;
-  color: #ffffff;
+  color: var(--background-color);
   padding-top: 10px;
   padding-bottom: 10px;
   padding-left: 29px;
