--- a/css/styles.css
+++ b/css/styles.css
@@ -1053,7 +1053,7 @@ input {
   flex-direction: column;
 }
 .mailing-input:focus {
-  border-color: var(--adress-color);
+  border-color: var(--accent);
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .mailing-list input {
